# oci-assignment

./: README.md  pyproject.toml
oci_python/: oci-interaction.py  ociclientwrapper.py
