[tool.poetry]
name = "oci-python"
version = "0.1.0"
description = ""
authors = ["Anantharamakrishnan Natarajan"]
readme = "README.md"
packages = [{include = "oci_python"}]

[tool.poetry.dependencies]
python = "^3.11"
oci = "^2.110.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
